--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-maps": "^0.26.1",
     "react-native-reanimated": "~1.4.0",
+    "react-native-snap-carousel": "^3.8.4",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3"
